[package]
name = "cansend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcan-basic = { version = "1.0.0", optional = true }
socketcan = { version = "1.7.0", optional = true }
clap = "3.1.18"

[features]
peak = ["dep:pcan-basic"]
socketcan = ["dep:socketcan"]
default = ["peak"]